@@ -2362,3 +2362,24 @@ div.column-left {
 .column-center #content {
     padding-top:3px;
 }
+div#viewlet-above-content-title #panel-notification {
+    border-radius: 5px;
+    box-shadow: 0 0 10px #fff;
+    left: 0;
+    margin: 0 auto;
+    position: fixed;
+    right: 0;
+    top: 100px;
+    width: 450px;
+    z-index: 4000;
+}
+div#viewlet-above-content-title #panel-notification div.error-notification-item {
+    background: url("/Plone/++resource++bika.lims.images/warning.png") no-repeat scroll 15px center #fff680;
+    border-radius: 5px;
+    padding: 15px 30px 15px 40px;
+}
+div#viewlet-above-content-title #panel-notification div.succeed-notification-item {
+    background: url("/Plone/++resource++bika.lims.images/ok.png") no-repeat scroll 15px center #E2F1C5;
+    border-radius: 5px;
+    padding: 15px 30px 15px 40px;
+}
